# D2COpenAIPlugin

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit.config.yaml  Dockerfile  Dockerfile.mcp  README.md  __init__.py  app.py  docker-compose.yml  docker-run.sh  main.py  mcp_server.py  package-lock.json  package.json  requirement-prod.txt  requirement.txt  requirements-dev.txt  requirements.txt  test_app.py  tests.py  vercel.json
.github/workflows/: CD.yml  CI.yml
.well-known/: ai-plugin.json  openapi.json  openapi.yaml  privacy.txt
D2/: d2.py  d2_playwright.js  js2py.py  package.json  playwright_d2.py  run_d2.py
docs/: ChatEXAMPLE.md  GUIDE.md
kroki/: __init__.py  kroki.py  kroki_templates.py
mcp/: Dockerfile  README.md  install_to_cursor.py  mcp-requirements.txt  smithery.yaml
mcp/api/: __init__.py  docs_generator.py
mcp/config/: cursor_config.json
mcp/core/: __init__.py  config.py  server.py  utils.py
mcp/prompts/: __init__.py  diagram_prompts.py
mcp/resources/: __init__.py  diagram_resources.py
mcp/server/: __init__.py  fastmcp_wrapper.py
mcp/tools/: __init__.py  diagram_tools.py
mermaid/: mermaid.py
plantuml/: __init__.py  pyproject.toml
plantuml/plantumlapi/: __init__.py
plantuml/plantumlapi/tests/: test_exceptions.py  test_plantuml.py
plantuml/themes/: __init__.py
plantumlapi/: README.md  __init__.py  mkdocs.yml  pre-commit.config.yaml  pyproject.toml  requirements.txt  setup.py
plantumlapi/docs/: contacts.md  reference.md
plantumlapi/plantumlapi/: __init__.py  diagrams.py  docker.py  exceptions.py
plantumlapi/plantumlapi/tests/: test_exceptions.py  test_plantuml.py
plantumlapi/plantumlapi/themes/: theme.py
plantumlapi/tests/: test_exceptions.py  test_plantuml.py
