[tool.poetry]
name = "plantumlapi"
version = "0.1.10"
description = "PyPlantuml's API"
authors = ["Antoine Boucher <antoine.boucher012@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "http://github.com/antoineboucher/pyplantuml"
documentation = "http://github.com/antoineboucher/pyplantuml"
keywords = ["plantuml", "api", "plantuml-api", "plantuml-api-client"]
classifiers=[
        'Development Status :: 3 - Alpha',
        'Programming Language :: Python',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.6',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: Implementation :: CPython',
        'Intended Audience :: Developers',
        'Intended Audience :: System Administrators',
        'License :: OSI Approved :: BSD License',
        'Topic :: Internet :: WWW/HTTP',
        'Topic :: Utilities',
        'Topic :: Software Development :: Libraries :: Python Modules',
    ]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.24.0"
beautifulsoup4 = "^4.12.0"
rich = "^13.3.2"
pydantic = "^1.8.2"
python-dotenv = "^0.19.2"
typer = "^0.4.0"
docker = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
sphinx = "^6.1.3"
pre-commit = "^3.0.0"
black = "^23.1.0"
genbadge = "^1.0.0"
mkdocs = "^1.4.2"
mkdocs-material = "^9.1.5"
mkdocstrings = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"